// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerticalTimeline should render 1`] = `
<div>
  <div
    class="vertical-timeline-root"
  >
    <ul
      class="timeline timeline-center"
    >
      <li
        class="timeline-item header"
      >
        <div
          class="timeline-panel"
        >
          <div
            class="timeline-panel-body"
          >
            <div
              class="timeline-panel-body-content"
            >
              <div
                class="timeline-panel-body-content-text"
              >
                <span
                  class="title"
                >
                  Today
                </span>
                <svg
                  class="icon-root lexicon-icon lexicon-icon-ac-event-icon event-icon"
                  viewBox=""
                >
                  <use
                    xlink:href="/o/osb-faro-web/dist/sprite.svg#ac-event-icon"
                  />
                </svg>
                <span
                  class="item-count"
                />
              </div>
              <div
                class="timeline-panel-body-content-details"
              />
            </div>
          </div>
        </div>
      </li>
      <li
        class="timeline-item"
      >
        <div
          class="timeline-panel"
        >
          <div
            class="timeline-panel-body"
          >
            <div
              class="timeline-increment"
            >
              <div
                class="sticker sticker-root sticker-static sticker-circle sticker-point sticker-lg"
              />
              <div
                class="timeline-item-label timeline-time-label label-root"
              >
                10:56pm
              </div>
            </div>
            <div
              class="timeline-panel-body-content"
            >
              <div
                class="timeline-panel-body-content-text"
              >
                <span
                  class="title"
                >
                  Visited
                   
                  <a
                    href="/#1"
                  >
                    www.liferay.com
                  </a>
                </span>
                <span
                  class="text-truncate subtitle"
                  data-tooltip="false"
                  title=""
                >
                  3 Document Downloads, 2 Form Submissions, 24 Page Visits
                </span>
              </div>
              <div
                class="timeline-panel-body-content-details"
              />
              <svg
                class="icon-root lexicon-icon lexicon-icon-caret-bottom"
                viewBox=""
              >
                <use
                  xlink:href="/o/osb-faro-web/dist/sprite.svg#caret-bottom"
                />
              </svg>
            </div>
          </div>
        </div>
      </li>
      <li
        class="timeline-item"
      >
        <div
          class="timeline-panel"
        >
          <div
            class="timeline-panel-body"
          >
            <div
              class="timeline-increment"
            >
              <div
                class="sticker sticker-root sticker-static sticker-circle sticker-point sticker-lg"
              />
              <div
                class="timeline-item-label timeline-time-label label-root"
              >
                10:56pm
              </div>
            </div>
            <div
              class="timeline-panel-body-content"
            >
              <div
                class="timeline-panel-body-content-text"
              >
                <span
                  class="title"
                >
                  <a
                    href="/#2"
                  >
                    New Business Purchase
                  </a>
                </span>
                <span
                  class="text-truncate subtitle"
                  data-tooltip="false"
                  title=""
                >
                  3 Document Downloads, 2 Form Submissions, 24 Page Visits
                </span>
              </div>
              <div
                class="timeline-panel-body-content-details"
              />
              <svg
                class="icon-root lexicon-icon lexicon-icon-caret-bottom"
                viewBox=""
              >
                <use
                  xlink:href="/o/osb-faro-web/dist/sprite.svg#caret-bottom"
                />
              </svg>
            </div>
          </div>
        </div>
      </li>
      <li
        class="timeline-item header"
      >
        <div
          class="timeline-panel"
        >
          <div
            class="timeline-panel-body"
          >
            <div
              class="timeline-panel-body-content"
            >
              <div
                class="timeline-panel-body-content-text"
              >
                <span
                  class="title"
                >
                  Yesterday
                </span>
                <svg
                  class="icon-root lexicon-icon lexicon-icon-ac-event-icon event-icon"
                  viewBox=""
                >
                  <use
                    xlink:href="/o/osb-faro-web/dist/sprite.svg#ac-event-icon"
                  />
                </svg>
                <span
                  class="item-count"
                />
              </div>
              <div
                class="timeline-panel-body-content-details"
              />
            </div>
          </div>
        </div>
      </li>
      <li
        class="timeline-item"
      >
        <div
          class="timeline-panel"
        >
          <div
            class="timeline-panel-body"
          >
            <div
              class="timeline-increment"
            >
              <div
                class="sticker sticker-root sticker-static sticker-circle sticker-point sticker-lg"
              />
              <div
                class="timeline-item-label timeline-time-label label-root"
              >
                10:56pm
              </div>
            </div>
            <div
              class="timeline-panel-body-content"
            >
              <div
                class="timeline-panel-body-content-text"
              >
                <span
                  class="title"
                >
                  Opened Email
                </span>
                <span
                  class="text-truncate subtitle"
                  data-tooltip="false"
                  title=""
                >
                  3 Document Downloads, 2 Form Submissions, 24 Page Visits
                </span>
              </div>
              <div
                class="timeline-panel-body-content-details"
              />
              <svg
                class="icon-root lexicon-icon lexicon-icon-caret-bottom"
                viewBox=""
              >
                <use
                  xlink:href="/o/osb-faro-web/dist/sprite.svg#caret-bottom"
                />
              </svg>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`VerticalTimeline should render with a header 1`] = `
<div>
  <div
    class="vertical-timeline-root"
  >
    <ul
      class="timeline timeline-center"
    >
      <li
        class="timeline-item header"
      >
        <div
          class="timeline-panel"
        >
          <div
            class="timeline-panel-body"
          >
            <div
              class="timeline-panel-body-content"
            >
              <div
                class="timeline-panel-body-content-text"
              >
                <span
                  class="title"
                >
                  Today
                </span>
                <svg
                  class="icon-root lexicon-icon lexicon-icon-ac-event-icon event-icon"
                  viewBox=""
                >
                  <use
                    xlink:href="/o/osb-faro-web/dist/sprite.svg#ac-event-icon"
                  />
                </svg>
                <span
                  class="item-count"
                />
              </div>
              <div
                class="timeline-panel-body-content-details"
              />
            </div>
          </div>
        </div>
      </li>
      <li
        class="timeline-item"
      >
        <div
          class="timeline-panel"
        >
          <div
            class="timeline-panel-body"
          >
            <div
              class="timeline-increment"
            >
              <div
                class="sticker sticker-root sticker-static sticker-circle sticker-point sticker-lg"
              />
              <div
                class="timeline-item-label timeline-time-label label-root"
              >
                10:56pm
              </div>
            </div>
            <div
              class="timeline-panel-body-content"
            >
              <div
                class="timeline-panel-body-content-text"
              >
                <span
                  class="title"
                >
                  Visited
                   
                  <a
                    href="/#1"
                  >
                    www.liferay.com
                  </a>
                </span>
                <span
                  class="text-truncate subtitle"
                  data-tooltip="false"
                  title=""
                >
                  3 Document Downloads, 2 Form Submissions, 24 Page Visits
                </span>
              </div>
              <div
                class="timeline-panel-body-content-details"
              />
              <svg
                class="icon-root lexicon-icon lexicon-icon-caret-bottom"
                viewBox=""
              >
                <use
                  xlink:href="/o/osb-faro-web/dist/sprite.svg#caret-bottom"
                />
              </svg>
            </div>
          </div>
        </div>
      </li>
      <li
        class="timeline-item"
      >
        <div
          class="timeline-panel"
        >
          <div
            class="timeline-panel-body"
          >
            <div
              class="timeline-increment"
            >
              <div
                class="sticker sticker-root sticker-static sticker-circle sticker-point sticker-lg"
              />
              <div
                class="timeline-item-label timeline-time-label label-root"
              >
                10:56pm
              </div>
            </div>
            <div
              class="timeline-panel-body-content"
            >
              <div
                class="timeline-panel-body-content-text"
              >
                <span
                  class="title"
                >
                  <a
                    href="/#2"
                  >
                    New Business Purchase
                  </a>
                </span>
                <span
                  class="text-truncate subtitle"
                  data-tooltip="false"
                  title=""
                >
                  3 Document Downloads, 2 Form Submissions, 24 Page Visits
                </span>
              </div>
              <div
                class="timeline-panel-body-content-details"
              />
              <svg
                class="icon-root lexicon-icon lexicon-icon-caret-bottom"
                viewBox=""
              >
                <use
                  xlink:href="/o/osb-faro-web/dist/sprite.svg#caret-bottom"
                />
              </svg>
            </div>
          </div>
        </div>
      </li>
      <li
        class="timeline-item header"
      >
        <div
          class="timeline-panel"
        >
          <div
            class="timeline-panel-body"
          >
            <div
              class="timeline-panel-body-content"
            >
              <div
                class="timeline-panel-body-content-text"
              >
                <span
                  class="title"
                >
                  Yesterday
                </span>
                <svg
                  class="icon-root lexicon-icon lexicon-icon-ac-event-icon event-icon"
                  viewBox=""
                >
                  <use
                    xlink:href="/o/osb-faro-web/dist/sprite.svg#ac-event-icon"
                  />
                </svg>
                <span
                  class="item-count"
                />
              </div>
              <div
                class="timeline-panel-body-content-details"
              />
            </div>
          </div>
        </div>
      </li>
      <li
        class="timeline-item"
      >
        <div
          class="timeline-panel"
        >
          <div
            class="timeline-panel-body"
          >
            <div
              class="timeline-increment"
            >
              <div
                class="sticker sticker-root sticker-static sticker-circle sticker-point sticker-lg"
              />
              <div
                class="timeline-item-label timeline-time-label label-root"
              >
                10:56pm
              </div>
            </div>
            <div
              class="timeline-panel-body-content"
            >
              <div
                class="timeline-panel-body-content-text"
              >
                <span
                  class="title"
                >
                  Opened Email
                </span>
                <span
                  class="text-truncate subtitle"
                  data-tooltip="false"
                  title=""
                >
                  3 Document Downloads, 2 Form Submissions, 24 Page Visits
                </span>
              </div>
              <div
                class="timeline-panel-body-content-details"
              />
              <svg
                class="icon-root lexicon-icon lexicon-icon-caret-bottom"
                viewBox=""
              >
                <use
                  xlink:href="/o/osb-faro-web/dist/sprite.svg#caret-bottom"
                />
              </svg>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`VerticalTimeline should render with nested items 1`] = `
<div>
  <div
    class="vertical-timeline-root"
  >
    <ul
      class="timeline timeline-center"
    >
      <li
        class="timeline-item header"
      >
        <div
          class="timeline-panel"
        >
          <div
            class="timeline-panel-body"
          >
            <div
              class="timeline-panel-body-content"
            >
              <div
                class="timeline-panel-body-content-text"
              >
                <span
                  class="title"
                >
                  Yesterday
                </span>
                <svg
                  class="icon-root lexicon-icon lexicon-icon-ac-event-icon event-icon"
                  viewBox=""
                >
                  <use
                    xlink:href="/o/osb-faro-web/dist/sprite.svg#ac-event-icon"
                  />
                </svg>
                <span
                  class="item-count"
                />
              </div>
              <div
                class="timeline-panel-body-content-details"
              />
            </div>
          </div>
        </div>
      </li>
      <li
        class="timeline-item"
      >
        <div
          class="timeline-panel"
        >
          <div
            class="timeline-panel-body"
          >
            <div
              class="timeline-increment"
            >
              <div
                class="sticker sticker-root sticker-static sticker-circle sticker-point sticker-lg"
              />
              <div
                class="timeline-item-label timeline-time-label label-root"
              >
                <span>
                  10:56pm
                </span>
                 - 
                <span>
                  in progress
                </span>
              </div>
            </div>
            <div
              class="timeline-panel-body-content"
            >
              <div
                class="timeline-panel-body-content-text"
              >
                <span
                  class="title"
                >
                  Opened Email
                </span>
                <span
                  class="text-truncate subtitle"
                  data-tooltip="false"
                  title=""
                >
                  3 Document Downloads, 2 Form Submissions, 24 Page Visits
                </span>
              </div>
              <div
                class="timeline-panel-body-content-details"
              />
              <svg
                class="icon-root lexicon-icon lexicon-icon-caret-bottom"
                viewBox=""
              >
                <use
                  xlink:href="/o/osb-faro-web/dist/sprite.svg#caret-bottom"
                />
              </svg>
            </div>
          </div>
          <div
            class="vertical-timeline-root"
          >
            <ul
              class="timeline timeline-center timeline-nested"
            >
              <li
                class="timeline-item"
              >
                <div
                  class="timeline-panel"
                >
                  <div
                    class="timeline-panel-body"
                  >
                    <div
                      class="timeline-increment"
                    >
                      <div
                        class="sticker sticker-root sticker-static sticker-circle sticker-point sticker-lg"
                      />
                      <div
                        class="timeline-item-label timeline-time-label label-root"
                      >
                        10:56pm
                      </div>
                    </div>
                    <div
                      class="timeline-panel-body-content"
                    >
                      <div
                        class="timeline-panel-body-content-text"
                      >
                        <span
                          class="title"
                        >
                          Visited Liferay: Testing
                        </span>
                        <span
                          class="text-truncate subtitle"
                          data-tooltip="false"
                          title=""
                        >
                          www.liferay.com/testing
                        </span>
                      </div>
                      <div
                        class="timeline-panel-body-content-details"
                      />
                      <svg
                        class="icon-root lexicon-icon lexicon-icon-caret-bottom"
                        viewBox=""
                      >
                        <use
                          xlink:href="/o/osb-faro-web/dist/sprite.svg#caret-bottom"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="timeline-item"
              >
                <div
                  class="timeline-panel"
                >
                  <div
                    class="timeline-panel-body"
                  >
                    <div
                      class="timeline-increment"
                    >
                      <div
                        class="sticker sticker-root sticker-static sticker-circle sticker-point sticker-lg"
                      />
                      <div
                        class="timeline-item-label timeline-time-label label-root"
                      >
                        10:56pm
                      </div>
                    </div>
                    <div
                      class="timeline-panel-body-content"
                    >
                      <div
                        class="timeline-panel-body-content-text"
                      >
                        <span
                          class="title"
                        >
                          Visited Liferay: Testing 2
                        </span>
                        <span
                          class="text-truncate subtitle"
                          data-tooltip="false"
                          title=""
                        >
                          www.liferay.com/testing 2
                        </span>
                      </div>
                      <div
                        class="timeline-panel-body-content-details"
                      />
                      <svg
                        class="icon-root lexicon-icon lexicon-icon-caret-bottom"
                        viewBox=""
                      >
                        <use
                          xlink:href="/o/osb-faro-web/dist/sprite.svg#caret-bottom"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`VerticalTimeline should render with nested items collapsed 1`] = `
<div>
  <div
    class="vertical-timeline-root"
  >
    <ul
      class="timeline timeline-center"
    >
      <li
        class="timeline-item header"
      >
        <div
          class="timeline-panel"
        >
          <div
            class="timeline-panel-body"
          >
            <div
              class="timeline-panel-body-content"
            >
              <div
                class="timeline-panel-body-content-text"
              >
                <span
                  class="title"
                >
                  Yesterday
                </span>
                <svg
                  class="icon-root lexicon-icon lexicon-icon-ac-event-icon event-icon"
                  viewBox=""
                >
                  <use
                    xlink:href="/o/osb-faro-web/dist/sprite.svg#ac-event-icon"
                  />
                </svg>
                <span
                  class="item-count"
                />
              </div>
              <div
                class="timeline-panel-body-content-details"
              />
            </div>
          </div>
        </div>
      </li>
      <li
        class="timeline-item"
      >
        <div
          class="timeline-panel"
        >
          <div
            class="timeline-panel-body"
          >
            <div
              class="timeline-increment"
            >
              <div
                class="sticker sticker-root sticker-static sticker-circle sticker-point sticker-lg"
              />
              <div
                class="timeline-item-label timeline-time-label label-root"
              >
                <span>
                  10:56pm
                </span>
                 - 
                <span>
                  in progress
                </span>
              </div>
            </div>
            <div
              class="timeline-panel-body-content"
            >
              <div
                class="timeline-panel-body-content-text"
              >
                <span
                  class="title"
                >
                  Opened Email
                </span>
                <span
                  class="text-truncate subtitle"
                  data-tooltip="false"
                  title=""
                >
                  3 Document Downloads, 2 Form Submissions, 24 Page Visits
                </span>
              </div>
              <div
                class="timeline-panel-body-content-details"
              />
              <svg
                class="icon-root lexicon-icon lexicon-icon-caret-bottom"
                viewBox=""
              >
                <use
                  xlink:href="/o/osb-faro-web/dist/sprite.svg#caret-bottom"
                />
              </svg>
            </div>
          </div>
          <div
            class="vertical-timeline-root"
          >
            <ul
              class="timeline timeline-center timeline-nested"
            >
              <li
                class="timeline-item"
              >
                <div
                  class="timeline-panel"
                >
                  <div
                    class="timeline-panel-body"
                  >
                    <div
                      class="timeline-increment"
                    >
                      <div
                        class="sticker sticker-root sticker-static sticker-circle sticker-point sticker-lg"
                      />
                      <div
                        class="timeline-item-label timeline-time-label label-root"
                      >
                        10:56pm
                      </div>
                    </div>
                    <div
                      class="timeline-panel-body-content"
                    >
                      <div
                        class="timeline-panel-body-content-text"
                      >
                        <span
                          class="title"
                        >
                          Visited Liferay: Testing
                        </span>
                        <span
                          class="text-truncate subtitle"
                          data-tooltip="false"
                          title=""
                        >
                          www.liferay.com/testing
                        </span>
                      </div>
                      <div
                        class="timeline-panel-body-content-details"
                      />
                      <svg
                        class="icon-root lexicon-icon lexicon-icon-caret-bottom"
                        viewBox=""
                      >
                        <use
                          xlink:href="/o/osb-faro-web/dist/sprite.svg#caret-bottom"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="timeline-item"
              >
                <div
                  class="timeline-panel"
                >
                  <div
                    class="timeline-panel-body"
                  >
                    <div
                      class="timeline-increment"
                    >
                      <div
                        class="sticker sticker-root sticker-static sticker-circle sticker-point sticker-lg"
                      />
                      <div
                        class="timeline-item-label timeline-time-label label-root"
                      >
                        10:56pm
                      </div>
                    </div>
                    <div
                      class="timeline-panel-body-content"
                    >
                      <div
                        class="timeline-panel-body-content-text"
                      >
                        <span
                          class="title"
                        >
                          Visited Liferay: Testing 2
                        </span>
                        <span
                          class="text-truncate subtitle"
                          data-tooltip="false"
                          title=""
                        >
                          www.liferay.com/testing 2
                        </span>
                      </div>
                      <div
                        class="timeline-panel-body-content-details"
                      />
                      <svg
                        class="icon-root lexicon-icon lexicon-icon-caret-bottom"
                        viewBox=""
                      >
                        <use
                          xlink:href="/o/osb-faro-web/dist/sprite.svg#caret-bottom"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
